--- a/frontend/expense-tracker/src/index.css
+++ b/frontend/expense-tracker/src/index.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 
-@theme {
-    --font-display: "Poppins", "sans-serif";
-    --breakpoint-3xl: 1920px;
-    --color-primary: #875cf5;
+@theme { /* It is not a standard CSS feature; it's likely used by a CSS preprocessor */
+    --font-display: "Poppins", "sans-serif"; /* Sets "Poppins", sans-serif as the primary display font */
+    --breakpoint-3xl: 1920px; /* Defines a screen breakpoint at 1920px (likely used for responsive design) */
+    --color-primary: #875cf5; /* Defines a primary color (#875cf5, a purple shade) */
 }
 
-@layer base {
+@layer base { /* It is a Tailwind directive that adds global styles */
     html {
         font-family: var(--font-display);
     }
 
     body {
         background-color: #fcfbfc;
-        overflow-x: hidden;
+        overflow-x: hidden; /* prevents horizontal scrolling */
     }
 }
